Fix chat message overflow issue in safari

--- a/styles/global.css
+++ b/styles/global.css
@@ -42,6 +42,7 @@ body {
 
 .Text--markdown {
   overflow-wrap: anywhere;
+  word-break: break-word;
 }
 
 .Text--markdown a {
